--- a/drive_22/spring/laney_build_22.ipynb
+++ b/drive_22/spring/laney_build_22.ipynb
@@ -1920,6 +1920,76 @@
    "source": [
     "<img src=\"images/laneyb_mc5_table.png\" height=100% width=100%>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "eaf7934e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Q26',\n",
+       " 'Verify',\n",
+       " 'QID1_1',\n",
+       " 'QID1_2',\n",
+       " 'Programming Skills_1',\n",
+       " 'Programming Skills_2',\n",
+       " 'Programming Skills_3',\n",
+       " 'Programming Skills_1.1',\n",
+       " 'Programming Skills_2.1',\n",
+       " 'Programming Skills_3.1',\n",
+       " 'Values_1',\n",
+       " 'Values_2',\n",
+       " 'Values_3',\n",
+       " 'SJ & Community_1',\n",
+       " 'SJ & Community',\n",
+       " 'SJ & Community.1',\n",
+       " 'Community_1',\n",
+       " 'Community_2',\n",
+       " 'Community_3',\n",
+       " 'Community_4',\n",
+       " 'Community',\n",
+       " 'Goals',\n",
+       " 'Goals_1',\n",
+       " 'Career Opportunities_1',\n",
+       " 'Career Opportunities_2',\n",
+       " 'Edu opportunity',\n",
+       " 'Gee_1',\n",
+       " 'Gee_2',\n",
+       " 'Gee_3',\n",
+       " 'McAlpine_1',\n",
+       " 'McAlpine_2',\n",
+       " 'McAlpine_3',\n",
+       " 'McAlpine_4',\n",
+       " 'McAlpine_5',\n",
+       " 'Crenshaw',\n",
+       " 'Crenshaw.1',\n",
+       " 'Crenshaw.2',\n",
+       " 'Any last thoughts?_1',\n",
+       " 'Any last thoughts?_2',\n",
+       " 'Why recommend',\n",
+       " 'Open',\n",
+       " 'SC0']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(laney1.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f03eef09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
